--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -174,7 +174,8 @@
         font-family: "Yekan Regular";
         overflow-x: hidden;
     }
-    .backgroundImage{
+
+    .backgroundImage {
         background-image: url("/images/grid.svg");
         background-position: center;
     }
@@ -184,4 +185,25 @@
         justify-content: space-between !important;
         align-items: center;
     }
+
+    .sort-filter {
+        position: relative;
+        height: 100%;
+        display: flex;
+        background: #000;
+        align-items: center;
+    }
+
+    .sort-filter {
+        position: absolute;
+        content: "";
+        width: 3rem;
+        height: 4px;
+        background: blue;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        margin: 0 auto;
+    }
+
 }
