--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -186,24 +186,25 @@
         align-items: center;
     }
 
-    .sort-filter {
+    .sort-btn--active {
         position: relative;
-        height: 100%;
         display: flex;
-        background: #000;
         align-items: center;
+        color: #5EB5F8;
+        height: 100%;
     }
 
-    .sort-filter {
-        position: absolute;
+    .sort-btn--active::before {
         content: "";
-        width: 3rem;
+        position: absolute;
+        width: 4rem;
         height: 4px;
-        background: blue;
         bottom: 0;
-        right: 0;
+        background: #5EB5F8;
         left: 0;
-        margin: 0 auto;
+        right: 0;
+        margin: auto;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
     }
-
 }
