--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -207,4 +207,72 @@
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
     }
+
+    .loader {
+        width: 48px;
+        height: 48px;
+        margin: auto;
+        position: relative;
+    }
+
+    .loader:before {
+        content: '';
+        width: 48px;
+        height: 5px;
+        background: #1F2732;
+        position: absolute;
+        top: 60px;
+        box-shadow: 0 4px 15px rgba(31, 39, 50, 0.6);
+        left: 0;
+        border-radius: 50%;
+        animation: shadow324 0.5s linear infinite;
+    }
+
+    .loader:after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: #d5e7ed;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 4px;
+        animation: jump7456 0.5s linear infinite;
+    }
+
+    @keyframes jump7456 {
+        15% {
+            border-bottom-right-radius: 3px;
+        }
+
+        25% {
+            transform: translateY(9px) rotate(22.5deg);
+        }
+
+        50% {
+            transform: translateY(18px) scale(1, .9) rotate(45deg);
+            border-bottom-right-radius: 40px;
+        }
+
+        75% {
+            transform: translateY(9px) rotate(67.5deg);
+        }
+
+        100% {
+            transform: translateY(0) rotate(90deg);
+        }
+    }
+
+    @keyframes shadow324 {
+
+        0%,
+        100% {
+            transform: scale(1, 1);
+        }
+
+        50% {
+            transform: scale(1.2, 1);
+        }
+    }
+
 }
