--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -275,4 +275,17 @@
         }
     }
 
+
+    .product__feature-color::before {
+        position: absolute;
+        content: "";
+        width: 8px;
+        height: 8px;
+        border-radius: 3px;
+        right: -16px;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+    }
+
 }
