add swiper slider to product detail

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -288,4 +288,9 @@
         margin: auto;
     }
 
+    .back{
+        background-image: url("/images/svg/instagramWave.svg");
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
 }
